APIs/googleapis.com/pagespeedonline/v5/python-client/docs/PagespeedapiApi.md
# openapi_client.PagespeedapiApi

All URIs are relative to *https://pagespeedonline.googleapis.com*

Method | HTTP request | Description
------------- | ------------- | -------------
[**pagespeedonline_pagespeedapi_runpagespeed**](PagespeedapiApi.md#pagespeedonline_pagespeedapi_runpagespeed) | **GET** /pagespeedonline/v5/runPagespeed | 


# **pagespeedonline_pagespeedapi_runpagespeed**
> PagespeedApiPagespeedResponseV5 pagespeedonline_pagespeedapi_runpagespeed(url, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, captcha_token=captcha_token, category=category, locale=locale, strategy=strategy, utm_campaign=utm_campaign, utm_source=utm_source)



Runs PageSpeed analysis on the page at the specified URL, and returns PageSpeed scores, a list of suggestions to make that page faster, and other information.

### Example

* OAuth Authentication (Oauth2c):
* OAuth Authentication (Oauth2):

```python
import openapi_client
from openapi_client.models.pagespeed_api_pagespeed_response_v5 import PagespeedApiPagespeedResponseV5
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://pagespeedonline.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://pagespeedonline.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]

# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.PagespeedapiApi(api_client)
    url = 'url_example' # str | Required. The URL to fetch and analyze
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    captcha_token = 'captcha_token_example' # str | The captcha token passed when filling out a captcha. (optional)
    category = ['category_example'] # List[str] | A Lighthouse category to run; if none are given, only Performance category will be run (optional)
    locale = 'locale_example' # str | The locale used to localize formatted results (optional)
    strategy = 'strategy_example' # str | The analysis strategy (desktop or mobile) to use, and desktop is the default (optional)
    utm_campaign = 'utm_campaign_example' # str | Campaign name for analytics. (optional)
    utm_source = 'utm_source_example' # str | Campaign source for analytics. (optional)

    try:
        api_response = api_instance.pagespeedonline_pagespeedapi_runpagespeed(url, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, captcha_token=captcha_token, category=category, locale=locale, strategy=strategy, utm_campaign=utm_campaign, utm_source=utm_source)
        print("The response of PagespeedapiApi->pagespeedonline_pagespeedapi_runpagespeed:\n")
        pprint(api_response)
    except Exception as e:
        print("Exception when calling PagespeedapiApi->pagespeedonline_pagespeedapi_runpagespeed: %s\n" % e)
```



### Parameters


Name | Type | Description  | Notes
------------- | ------------- | ------------- | -------------
 **url** | **str**| Required. The URL to fetch and analyze | 
 **xgafv** | **str**| V1 error format. | [optional] 
 **access_token** | **str**| OAuth access token. | [optional] 
 **alt** | **str**| Data format for response. | [optional] 
 **param_callback** | **str**| JSONP | [optional] 
 **fields** | **str**| Selector specifying which fields to include in a partial response. | [optional] 
 **key** | **str**| API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. | [optional] 
 **oauth_token** | **str**| OAuth 2.0 token for the current user. | [optional] 
 **pretty_print** | **bool**| Returns response with indentations and line breaks. | [optional] 
 **quota_user** | **str**| Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. | [optional] 
 **upload_protocol** | **str**| Upload protocol for media (e.g. \&quot;raw\&quot;, \&quot;multipart\&quot;). | [optional] 
 **upload_type** | **str**| Legacy upload protocol for media (e.g. \&quot;media\&quot;, \&quot;multipart\&quot;). | [optional] 
 **captcha_token** | **str**| The captcha token passed when filling out a captcha. | [optional] 
 **category** | [**List[str]**](str.md)| A Lighthouse category to run; if none are given, only Performance category will be run | [optional] 
 **locale** | **str**| The locale used to localize formatted results | [optional] 
 **strategy** | **str**| The analysis strategy (desktop or mobile) to use, and desktop is the default | [optional] 
 **utm_campaign** | **str**| Campaign name for analytics. | [optional] 
 **utm_source** | **str**| Campaign source for analytics. | [optional] 

### Return type

[**PagespeedApiPagespeedResponseV5**](PagespeedApiPagespeedResponseV5.md)

### Authorization

[Oauth2c](../README.md#Oauth2c), [Oauth2](../README.md#Oauth2)

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/json

### HTTP response details

| Status code | Description | Response headers |
|-------------|-------------|------------------|
**200** | Successful response |  -  |

[[Back to top]](#) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to Model list]](../README.md#documentation-for-models) [[Back to README]](../README.md)

